package com.interviewQuestions.parkingLot.utility;

public enum VehicleType {
    CAR,
    BIKE,
    TRUCK
}